--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body class="work-sans-font">
+
     <header class="bg-light">
       <nav class="navbar display-flex">
         <h3 class="brand">G3 Architects</h3>
@@ -27,10 +28,34 @@
       </nav>
 
       <div class="banner">
-        <h1 class="banner-title">Brand New Group of Architects</h1>
+       <div class="banner-content">
+         <h1 class="banner-title">Brand New Group of Architects</h1>
+        <p class="banner-description text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+        <button class="primary-btn">Explore More</button>
+       </div>
+        <img class="banner-img" src="./images/banner.png" alt="">
       </div>
     </header>
-    <main></main>
-    <footer></footer>
+    
+    <main>
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="feature-title"><span class="text-lightgray" id="quick-list">Quick list</span> <span id="of-out">of Our</span> <span id="features">Features</span></h3>
+                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <button class="primary-btn">Explore More</button>
+            </div>
+        </section>
+    </main>
+
+
+    <footer>
+
+    </footer>
   </body>
 </html>
