--- a/index.html
+++ b/index.html
@@ -46,10 +46,39 @@
                 <img src="./images/team4.png" alt="">
             </div>
             <div class="our-features">
-                <h3 class="feature-title"><span class="text-lightgray" id="quick-list">Quick list</span> <span id="of-out">of Our</span> <span id="features">Features</span></h3>
-                <p class="feature-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+                <h3 class="section-title"><span class="text-lightgray" id="quick-list">Quick list</span> <span id="of-out">of Our</span> <span class="text-primary" id="features">Features</span></h3>
+                <p class="feature-description text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
                 <button class="primary-btn">Explore More</button>
             </div>
+        </section>
+
+        <section>
+          <h3 class="section-title">Some Facts</h3>
+        </section>
+        <section class="some-facts">
+          <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
+          <div class="facts-container">
+            <div class="fact">
+              <img src="" alt="" class="fact-icon">
+              <h4 class="fact-number"></h4>
+              <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+              <img src="" alt="" class="fact-icon">
+              <h4 class="fact-number"></h4>
+              <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+              <img src="" alt="" class="fact-icon">
+              <h4 class="fact-number"></h4>
+              <h5 class="fact-name"></h5>
+            </div>
+            <div class="fact">
+              <img src="" alt="" class="fact-icon">
+              <h4 class="fact-number"></h4>
+              <h5 class="fact-name"></h5>
+            </div>
+          </div>
         </section>
     </main>
 
