--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body class="work-sans-font">
-
     <header class="bg-light">
       <nav class="navbar display-flex">
         <h3 class="brand">G3 Architects</h3>
@@ -28,63 +27,87 @@
       </nav>
 
       <div class="banner">
-       <div class="banner-content">
-         <h1 class="banner-title">Brand New Group of Architects</h1>
-        <p class="banner-description text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-        <button class="primary-btn">Explore More</button>
-       </div>
-        <img class="banner-img" src="./images/banner.png" alt="">
+        <div class="banner-content">
+          <h1 class="banner-title">Brand New Group of Architects</h1>
+          <p class="banner-description text-lightgray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="primary-btn">Explore More</button>
+        </div>
+        <img class="banner-img" src="./images/banner.png" alt="" />
       </div>
     </header>
-    
-    <main>
-        <section class="teams display-flex">
-            <div class="team-img-container">
-                <img src="./images/team1.png" alt="">
-                <img src="./images/team2.png" alt="">
-                <img src="./images/team3.png" alt="">
-                <img src="./images/team4.png" alt="">
-            </div>
-            <div class="our-features">
-                <h3 class="section-title"><span class="text-lightgray" id="quick-list">Quick list</span> <span id="of-out">of Our</span> <span class="text-primary" id="features">Features</span></h3>
-                <p class="feature-description text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                <button class="primary-btn">Explore More</button>
-            </div>
-        </section>
 
-        <section>
-          <h3 class="section-title">Some Facts</h3>
-        </section>
-        <section class="some-facts">
-          <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-          <div class="facts-container">
-            <div class="fact">
-              <img src="" alt="" class="fact-icon">
-              <h4 class="fact-number"></h4>
-              <h5 class="fact-name"></h5>
-            </div>
-            <div class="fact">
-              <img src="" alt="" class="fact-icon">
-              <h4 class="fact-number"></h4>
-              <h5 class="fact-name"></h5>
-            </div>
-            <div class="fact">
-              <img src="" alt="" class="fact-icon">
-              <h4 class="fact-number"></h4>
-              <h5 class="fact-name"></h5>
-            </div>
-            <div class="fact">
-              <img src="" alt="" class="fact-icon">
-              <h4 class="fact-number"></h4>
-              <h5 class="fact-name"></h5>
+    <main>
+      <section class="teams display-flex">
+        <div class="team-img-container">
+          <img src="./images/team1.png" alt="" />
+          <img src="./images/team2.png" alt="" />
+          <img src="./images/team3.png" alt="" />
+          <img src="./images/team4.png" alt="" />
+        </div>
+        <div class="our-features">
+          <h3 class="section-title">
+            <span class="text-lightgray" id="quick-list">Quick list</span>
+            <span id="of-out">of Our</span>
+            <span class="text-primary" id="features">Features</span>
+          </h3>
+          <p class="feature-description text-lightgray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
+          <button class="primary-btn">Explore More</button>
+        </div>
+      </section>
+
+      <section>
+        <h3 class="section-title">Some Facts</h3>
+      </section>
+      <section class="some-facts">
+        <p class="text-lightgray fact-description">
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration.
+        </p>
+        <div class="facts-container">
+          <div class="fact-card display-flex">
+            <div>
+              <img src="./images/icons/ribon.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">54</h4>
+              <h5 class="fact-name">Awards Winnings</h5>
             </div>
           </div>
-        </section>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="./images/icons/projects.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">1458</h4>
+              <h5 class="fact-name">Project Finished</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img
+                src="./images/icons/customers.png"
+                alt=""
+                class="fact-icon"
+              />
+              <h4 class="fact-number">590</h4>
+              <h5 class="fact-name">Clients Work</h5>
+            </div>
+          </div>
+          <div class="fact-card display-flex">
+            <div>
+              <img src="./images/icons/email.png" alt="" class="fact-icon" />
+              <h4 class="fact-number">22578</h4>
+              <h5 class="fact-name">Email Send</h5>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
-
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
 </html>
