--- a/index.html
+++ b/index.html
@@ -63,10 +63,8 @@
         </div>
       </section>
 
-      <section>
-        <h3 class="section-title">Some Facts</h3>
-      </section>
       <section class="some-facts">
+        <h3 class="section-title">Some Facts</h3>
         <p class="text-lightgray fact-description">
           There are many variations of passages of Lorem Ipsum available, but
           the majority have suffered alteration.
@@ -104,6 +102,23 @@
               <h5 class="fact-name">Email Send</h5>
             </div>
           </div>
+        </div>
+      </section>
+
+      <section class="our-sponsors">
+        <div class="sponsor-info">
+          <h3 class="section-title">Our Sponsors</h3>
+          <p class="text-lightgray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration.
+          </p>
+        </div>
+        <div class="sponsor-companies">
+          <img src="./images/sponsors/spotify.png" alt="" />
+          <img src="./images/sponsors/amazon.png" alt="" />
+          <img src="./images/sponsors/google.png" alt="" />
+          <img src="./images/sponsors/telerama.png" alt="" />
+          <img src="./images/sponsors/figma.png" alt="" />
         </div>
       </section>
     </main>
