--- a/index.html
+++ b/index.html
@@ -65,35 +65,57 @@
 
       <section class="features display-flex">
         <div>
-          <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
-          <p class="text-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
+          <h3 id="feature-section-title" class="section-title">
+            Features you will <br />
+            love & enjoy
+          </h3>
+          <p class="text-lightgray">
+            There are many variations of passages of Lorem Ipsum available, but
+            the majority have suffered alteration in some form, by injected
+            humour, or randomised words which don't look even
+          </p>
 
           <div class="feature-card">
             <h4>Desktop & Mobile Version</h4>
-            <p class="test-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <p class="test-lightgray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
           </div>
           <div class="feature-card">
             <h4>Desktop & Mobile Version</h4>
-            <p class="test-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <p class="test-lightgray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
           </div>
           <div class="feature-card">
             <h4>Desktop & Mobile Version</h4>
-            <p class="test-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <p class="test-lightgray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
           </div>
           <div class="feature-card">
             <h4>Desktop & Mobile Version</h4>
-            <p class="test-lightgray">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+            <p class="test-lightgray">
+              There are many variations of passages of Lorem Ipsum available,
+              but the majority have suffered alteration in some form, by
+              injected humour, or randomised...........
+            </p>
           </div>
         </div>
-        <div>
-          <img src="./images/architect.png" alt="">
+        <div class="featured-architect">
+          <img src="./images/architect.png" alt="" />
           <button id="experience-badge" class="primary-btn">
-            <span id="experience-year">10+Years</span><br>
+            <span id="experience-year">10+Years</span><br />
             <span>Experience</span>
           </button>
         </div>
       </section>
-
 
       <section class="some-facts">
         <h3 class="section-title">Some Facts</h3>
